[package]
name = "reduce-target"
version = "0.3.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[[bin]]
name = "reduce-target"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.31"
gumdrop = "0.8.0"
indexmap = { version = "1.4.0", features = ["rayon"] }
jwalk = "0.5.1"
rayon = "1.3.1"
